<resources>
    <string name="app_name">Covid 19 Jagratha</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="error_message_mobile_empty">Please enter mobile number</string>
    <string name="error_message_mobile">Invalid mobile number</string>
    <string name="error_message_name_empty">Please enter name</string>
    <string name="registration">Registration</string>
    <string name="address">Address</string>
    <string name="select_district">Select District</string>
    <string name="select_villege">Select Village</string>
    <string name="pin">Pin Code</string>
    <string name="select_phc">Select Primary helth centre</string>
    <string name="userName">UserName</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="message_err_username_empty">Please enter user name</string>
    <string name="message_err_password_empty">Please enter password</string>
    <string name="search">Search</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="view_members">View Members</string>
    <string name="symptoms">Health status monitoring report</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="please_ans_for_qn_s">Please answer for symptom %s</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="message_err_age_empty">Please enter age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_state">Select State</string>
    <string name="select_chc">Select HC</string>
    <string name="alternate_mobile_1">Alternate Mobile 1</string>
    <string name="alternate_mobile_2">Alternate Mobile 2</string>
    <string name="alternate_mobile_3">Alternate Mobile 3</string>
    <string name="error_message_confirm_pwd">Password does not match</string>
    <string name="message_err_address_empty">Please enter addresss</string>
    <string name="add_member">Add Member</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="message">Message</string>
    <string name="message_logout_confirmation">Are you sure ?</string>
    <string name="label">IOSS © VELOSIT © HEBSI</string>
    <string name="message_login_expired">Your login has been expired !</string>
    <string name="message_err_internal_error">Internal error occured</string>
</resources>
