<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="com.ioss.covid.viewModel.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.LoginActivity">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:id="@+id/covidTitleTV"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="COVID 19"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/jagrathaTitleTV"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="ജാഗ്രത"
            android:gravity="center_horizontal|top"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/subTitleTV"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="An initiative of District administration Kozhikode"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="#111"/>

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            android:layout_margin="10dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/margin_normal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTIL"
            style="@style/style_til_reg"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent">

            <EditText
                android:id="@+id/userNameET"
                style="@style/style_et_reg"
                android:hint="@string/userName"
                android:maxLength="30"
                android:minHeight="@dimen/button_height"
                android:singleLine="true"
                android:text="@={viewModel.userName}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            style="@style/style_til_reg"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordET"
                style="@style/style_et_reg"
                android:hint="@string/password"
                android:minHeight="@dimen/button_height"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <Button
            android:id="@+id/loginBT"
            style="@style/style_bt_basic"
            android:text="@string/login"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button_basic_curved"
            android:onClick="onClickLogin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/labelTV"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/label"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_gravity="center"
            android:textColor="@color/colorLabel"
            android:textSize="@dimen/text_size_label"/>

    </LinearLayout>
</layout>